syntax = "proto3";

package helloworld;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc ServerStreamingEcho(ServerStreamingEchoRequest) returns (stream ServerStreamingEchoResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message ServerStreamingEchoResponse {
  string message = 1;
}

message ServerStreamingEchoRequest {
  string message = 1;
  int32 message_count = 2;
  int32 message_interval = 3;
}

